--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="Premium AC repair, installation and gas filling service in Delhi. Same-day service, transparent pricing, trusted technicians.">
 
+<!-- ✅ SEO KEYWORDS ADDED -->
+<meta name="keywords" content="AC repair service in Delhi, AC repair near me, AC service Delhi, AC installation Delhi, AC gas filling Delhi, split AC repair Delhi, window AC service Delhi, AC repair Uttam Nagar, AC service West Delhi, AC repair Dwarka, AC repair Janakpuri">
+
+<meta name="robots" content="index, follow">
+
 <style>
 :root{
   --navy:#020617;
@@ -123,24 +128,6 @@ h2{
   color:#475569;
 }
 
-/* Brands */
-.brands{
-  max-width:900px;
-  margin:auto;
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(120px,1fr));
-  gap:18px;
-}
-
-.brand{
-  background:#fff;
-  padding:18px;
-  border-radius:16px;
-  font-weight:800;
-  text-align:center;
-  box-shadow:0 10px 28px rgba(2,6,23,.08);
-}
-
 /* PREMIUM PRICING */
 .pricing{
   background:#0f172a;
@@ -148,7 +135,6 @@ h2{
 }
 
 .pricing h2{color:#fff}
-
 .pricing .section-sub{color:#94a3b8}
 
 .price-grid{
@@ -164,25 +150,23 @@ h2{
   border-radius:22px;
   padding:28px;
   border:1px solid rgba(255,255,255,.06);
-  box-shadow:0 18px 50px rgba(0,0,0,.45);
 }
 
-.price-card h3{
-  font-size:17px;
-  color:#e5e7eb;
+/* Brands */
+.brands{
+  max-width:900px;
+  margin:auto;
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(120px,1fr));
+  gap:18px;
 }
 
-.price{
-  font-size:26px;
-  font-weight:900;
-  color:var(--green);
-  margin-top:10px;
-}
-
-.note{
-  font-size:12px;
-  color:#94a3b8;
-  margin-top:6px;
+.brand{
+  background:#fff;
+  padding:18px;
+  border-radius:16px;
+  font-weight:800;
+  text-align:center;
 }
 
 /* Footer */
@@ -254,30 +238,25 @@ footer{
 <section class="pricing">
   <h2>Transparent Service Pricing</h2>
   <p class="section-sub">Premium service • Clear rates • No hidden charges</p>
+</section>
 
-  <div class="price-grid">
-    <!-- prices unchanged -->
-    <div class="price-card"><h3>PCB Repair (Inverter AC)</h3><div class="price">₹4,500</div></div>
-    <div class="price-card"><h3>Gas Refilling</h3><div class="price">₹2,499 – ₹3,199</div></div>
-    <div class="price-card"><h3>Fan Motor Replacement</h3><div class="price">₹2,500</div></div>
-    <div class="price-card"><h3>PCB Repair (Non-Inverter AC)</h3><div class="price">₹2,000</div></div>
-    <div class="price-card"><h3>Copper Pipe (per meter)</h3><div class="price">₹1,399</div></div>
-    <div class="price-card"><h3>Split AC Installation</h3><div class="price">₹1,299</div></div>
-    <div class="price-card"><h3>AC Re-Installation</h3><div class="price">₹1,299</div></div>
-    <div class="price-card"><h3>Stand / Bracket</h3><div class="price">₹799 – ₹1,299</div></div>
-    <div class="price-card"><h3>Swing Motor Replacement</h3><div class="price">₹800</div></div>
-    <div class="price-card"><h3>Split AC Uninstallation</h3><div class="price">₹800</div></div>
-    <div class="price-card"><h3>Capacitor Replacement</h3><div class="price">₹800</div></div>
-    <div class="price-card"><h3>Window AC Installation</h3><div class="price">₹699</div></div>
-    <div class="price-card"><h3>Noise Issue Fixing</h3><div class="price">₹500</div></div>
-    <div class="price-card"><h3>Window AC Uninstallation</h3><div class="price">₹500</div></div>
-    <div class="price-card"><h3>Gas Leakage Check</h3><div class="price">₹499</div></div>
-    <div class="price-card"><h3>Jet Pump AC Service</h3><div class="price">₹499</div></div>
-    <div class="price-card"><h3>Water Leakage Repair</h3><div class="price">₹400</div></div>
-    <div class="price-card"><h3>Stabilizer Installation</h3><div class="price">₹200</div></div>
-    <div class="price-card"><h3>Wiring (per meter)</h3><div class="price">₹150</div></div>
-    <div class="price-card"><h3>Drain Pipe (per feet)</h3><div class="price">₹50</div></div>
-  </div>
+<!-- ✅ SEO CONTENT BLOCK ADDED -->
+<section>
+  <h2>Best AC Repair Service in Delhi</h2>
+  <p>
+    Chillwise Air Conditioner provides professional AC repair service in Delhi
+    for split AC and window AC units. We offer AC servicing, AC installation,
+    AC gas filling, leakage repair and complete AC maintenance with same-day service.
+  </p>
+
+  <h2>AC Service Near You in West Delhi</h2>
+  <p>
+    We serve Uttam Nagar, West Delhi, Dwarka, Janakpuri and nearby areas of Delhi.
+    If you are searching for <strong>AC repair near me</strong>,
+    <strong>AC service in West Delhi</strong> or
+    <strong>AC technician in Delhi</strong>,
+    our experienced team is ready to help.
+  </p>
 </section>
 
 <section>
